Adicionando livros endêmicos 2018

--- a/templates/content/pt-br/document/livros.html
+++ b/templates/content/pt-br/document/livros.html
@@ -1,3 +1,83 @@
+<div class="doc">
+    <div class="col-sm-3 col-md-3 col-lg-3">
+        <div class="img">
+            <a href="https://ckan.jbrj.gov.br/dataset/areasprioritariasrj" id="areas-prioritarias" style="text-decoration: none;">
+            <img src="{{static_url}}/images/projetos/planejamento/areas_prioritarias.png"/>
+          <div class="portfolio-overlay">
+            <p style="line-height:1.5em">
+              Áreas Prioritárias para conservação
+              da flora endêmica do estado do Rio de Janeiro
+            </p>
+          </div>
+        </a>
+      </div>
+    </div>
+</div>
+
+<div class="doc">
+    <div class="col-sm-3 col-md-3 col-lg-3">
+        <div class="img">
+            <a href="https://ckan.jbrj.gov.br/dataset/especies_procurase_rj" id="procura-se" style="text-decoration: none;">
+            <img src="{{static_url}}/images/projetos/planejamento/procura-se.png"/>
+          <div class="portfolio-overlay">
+            <p style="line-height:1.5em">
+              Guia Procura-se: Flora endêmica
+              do estado do Rio de Janeiro
+            </p>
+          </div>
+        </a>
+      </div>
+    </div>
+</div>
+
+<div class="doc">
+    <div class="col-sm-3 col-md-3 col-lg-3">
+        <div class="img">
+            <a href="https://ckan.jbrj.gov.br/dataset/ucsestaduaisrj" id="uc-estaduais" style="text-decoration: none;">
+            <img src="{{static_url}}/images/projetos/planejamento/unidades-conservacao.png"/>
+          <div class="portfolio-overlay">
+            <p style="line-height:1.5em">
+              Lista da flora das unidades de conservação
+              estaduais do Rio de Janeiro
+            </p>
+          </div>
+        </a>
+      </div>
+    </div>
+</div>
+
+<div class="doc">
+    <div class="col-sm-3 col-md-3 col-lg-3">
+        <div class="img">
+            <a href="https://ckan.jbrj.gov.br/dataset/livrovermelhoendemicasrj" id="livro-vermelho-endemico" style="text-decoration: none;">
+            <img src="{{static_url}}/images/projetos/planejamento/livro-vermelho-endemico.png"/>
+          <div class="portfolio-overlay">
+            <p style="line-height:1.5em">
+              Livro vermelho da Flora Endêmica
+              do estado do Rio de Janeiro
+            </p>
+          </div>
+        </a>
+      </div>
+    </div>
+</div>
+
+<div class="doc">
+    <div class="col-sm-3 col-md-3 col-lg-3">
+        <div class="img">
+            <a href="https://ckan.jbrj.gov.br/dataset/panendemicasrj" id="pan-endemico-rj" style="text-decoration: none;">
+            <img src="{{static_url}}/images/projetos/planejamento/plano-acao-conservacao-endemica-rj.png"/>
+          <div class="portfolio-overlay">
+            <p style="line-height:1.5em">
+              Plano de ação nacional para a conservação
+              da flora endêmica ameçada de extinção do
+              estado do Rio de Janeiro
+            </p>
+          </div>
+        </a>
+      </div>
+    </div>
+</div>
 
 <div class="doc">
     <div class="col-sm-3 col-md-3 col-lg-3">
