--- a/templates/home.html
+++ b/templates/home.html
@@ -90,6 +90,81 @@
 
       <section class="col-sm-12 col-md-12 col-lg-12">
         <div class="box post">
+            <a href="https://ckan.jbrj.gov.br/dataset/areasprioritariasrj" id="areas-prioritarias" style="text-decoration: none;" class="image left box-img">
+                <img src="{{static_url}}/images/projetos/planejamento/areas_prioritarias.png"/>
+            </a>
+            <div class="inner">
+                <h3>
+                    <a href="https://ckan.jbrj.gov.br/dataset/areasprioritariasrj" id="areas-prioritarias" style="text-decoration: none;">
+                      Áreas Prioritárias para Conservação da Flora Endêmica do estado do Rio de Janeiro
+                    </a>
+                </h3>
+            </div>
+        </div>
+      </section>
+
+      <section class="col-sm-12 col-md-12 col-lg-12">
+        <div class="box post">
+            <a href="https://ckan.jbrj.gov.br/dataset/especies_procurase_rj" id="procura-se" style="text-decoration: none;" class="image left box-img">
+                <img src="{{static_url}}/images/projetos/planejamento/procura-se.png"/>
+            </a>
+            <div class="inner">
+                <h3>
+                    <a href="https://ckan.jbrj.gov.br/dataset/especies_procurase_rj" id="procura-se2" style="text-decoration: none;">
+                      Guia Procura-se: Flora Endêmica do estado do Rio de Janeiro
+                    </a>
+                </h3>
+            </div>
+        </div>
+      </section>
+
+      <section class="col-sm-12 col-md-12 col-lg-12">
+        <div class="box post">
+            <a href="https://ckan.jbrj.gov.br/dataset/ucsestaduaisrj" id="uc-estaduais" style="text-decoration: none;" class="image left box-img">
+                <img src="{{static_url}}/images/projetos/planejamento/unidades-conservacao.png"/>
+            </a>
+            <div class="inner">
+                <h3>
+                    <a href="https://ckan.jbrj.gov.br/dataset/ucsestaduaisrj" id="uc-estaduais2" style="text-decoration: none;">
+                      Lista da Flora das Unidades de Conservação estaduais do Rio de Janeiro
+                    </a>
+                </h3>
+            </div>
+        </div>
+      </section>
+
+      <section class="col-sm-12 col-md-12 col-lg-12">
+        <div class="box post">
+            <a href="https://ckan.jbrj.gov.br/dataset/livrovermelhoendemicasrj" id="livro-vermelho-endemico" style="text-decoration: none;" class="image left box-img">
+                <img src="{{static_url}}/images/projetos/planejamento/livro-vermelho-endemico.png"/>
+            </a>
+            <div class="inner">
+                <h3>
+                    <a href="https://ckan.jbrj.gov.br/dataset/livrovermelhoendemicasrj" id="livro-vermelho-endemico2" style="text-decoration: none;">
+                      Livro Vermelho da Flora Endêmica do estado do Rio de Janeiro
+                    </a>
+                </h3>
+            </div>
+        </div>
+      </section>
+
+      <section class="col-sm-12 col-md-12 col-lg-12">
+        <div class="box post">
+            <a href="https://ckan.jbrj.gov.br/dataset/panendemicasrj" id="pan-endemico-rj" style="text-decoration: none;" class="image left box-img">
+                <img src="{{static_url}}/images/projetos/planejamento/plano-acao-conservacao-endemica-rj.png"/>
+            </a>
+            <div class="inner">
+                <h3>
+                    <a href="https://ckan.jbrj.gov.br/dataset/panendemicasrj" id="pan-endemico-rj2" style="text-decoration: none;">
+                      Plano de Ação Nacional para a Conservação da Flora Endêmica Ameçada de Extinção do estado do Rio de Janeiro
+                    </a>
+                </h3>
+            </div>
+        </div>
+      </section>
+
+      <section class="col-sm-12 col-md-12 col-lg-12">
+        <div class="box post">
             <a href="http://dspace.jbrj.gov.br/jspui/handle/doc/66" id="conservacao" style="text-decoration: none;" class="image left box-img">
                 <img src="{{static_url}}/images/projetos/planejamento/capa_estrategia_nacional.png"/>
             </a>
