trocando links ckan para dspace

--- a/templates/content/pt-br/document/livros.html
+++ b/templates/content/pt-br/document/livros.html
@@ -1,7 +1,7 @@
 <div class="doc">
     <div class="col-sm-3 col-md-3 col-lg-3">
         <div class="img">
-            <a href="https://ckan.jbrj.gov.br/dataset/areasprioritariasrj" id="areas-prioritarias" style="text-decoration: none;">
+            <a href="http://dspace.jbrj.gov.br/jspui/handle/doc/94" id="areas-prioritarias" style="text-decoration: none;">
             <img src="{{static_url}}/images/projetos/planejamento/areas_prioritarias.png"/>
           <div class="portfolio-overlay">
             <p style="line-height:1.5em">
@@ -17,7 +17,7 @@
 <div class="doc">
     <div class="col-sm-3 col-md-3 col-lg-3">
         <div class="img">
-            <a href="https://ckan.jbrj.gov.br/dataset/especies_procurase_rj" id="procura-se" style="text-decoration: none;">
+            <a href="http://dspace.jbrj.gov.br/jspui/handle/doc/95" id="procura-se" style="text-decoration: none;">
             <img src="{{static_url}}/images/projetos/planejamento/procura-se.png"/>
           <div class="portfolio-overlay">
             <p style="line-height:1.5em">
@@ -49,7 +49,7 @@
 <div class="doc">
     <div class="col-sm-3 col-md-3 col-lg-3">
         <div class="img">
-            <a href="https://ckan.jbrj.gov.br/dataset/livrovermelhoendemicasrj" id="livro-vermelho-endemico" style="text-decoration: none;">
+            <a href="ttp://dspace.jbrj.gov.br/jspui/handle/doc/92" id="livro-vermelho-endemico" style="text-decoration: none;">
             <img src="{{static_url}}/images/projetos/planejamento/livro-vermelho-endemico.png"/>
           <div class="portfolio-overlay">
             <p style="line-height:1.5em">
@@ -65,7 +65,7 @@
 <div class="doc">
     <div class="col-sm-3 col-md-3 col-lg-3">
         <div class="img">
-            <a href="https://ckan.jbrj.gov.br/dataset/panendemicasrj" id="pan-endemico-rj" style="text-decoration: none;">
+            <a href="http://dspace.jbrj.gov.br/jspui/handle/doc/93" id="pan-endemico-rj" style="text-decoration: none;">
             <img src="{{static_url}}/images/projetos/planejamento/plano-acao-conservacao-endemica-rj.png"/>
           <div class="portfolio-overlay">
             <p style="line-height:1.5em">
