--- a/templates/home.html
+++ b/templates/home.html
@@ -90,12 +90,12 @@
 
       <section class="col-sm-12 col-md-12 col-lg-12">
         <div class="box post">
-            <a href="https://ckan.jbrj.gov.br/dataset/areasprioritariasrj" id="areas-prioritarias" style="text-decoration: none;" class="image left box-img">
+            <a href="http://dspace.jbrj.gov.br/jspui/handle/doc/94" id="areas-prioritarias" style="text-decoration: none;" class="image left box-img">
                 <img src="{{static_url}}/images/projetos/planejamento/areas_prioritarias.png"/>
             </a>
             <div class="inner">
                 <h3>
-                    <a href="https://ckan.jbrj.gov.br/dataset/areasprioritariasrj" id="areas-prioritarias" style="text-decoration: none;">
+                    <a href="http://dspace.jbrj.gov.br/jspui/handle/doc/94" id="areas-prioritarias" style="text-decoration: none;">
                       Áreas Prioritárias para Conservação da Flora Endêmica do estado do Rio de Janeiro
                     </a>
                 </h3>
@@ -105,12 +105,12 @@
 
       <section class="col-sm-12 col-md-12 col-lg-12">
         <div class="box post">
-            <a href="https://ckan.jbrj.gov.br/dataset/especies_procurase_rj" id="procura-se" style="text-decoration: none;" class="image left box-img">
+            <a href="http://dspace.jbrj.gov.br/jspui/handle/doc/95" id="procura-se" style="text-decoration: none;" class="image left box-img">
                 <img src="{{static_url}}/images/projetos/planejamento/procura-se.png"/>
             </a>
             <div class="inner">
                 <h3>
-                    <a href="https://ckan.jbrj.gov.br/dataset/especies_procurase_rj" id="procura-se2" style="text-decoration: none;">
+                    <a href="http://dspace.jbrj.gov.br/jspui/handle/doc/95" id="procura-se2" style="text-decoration: none;">
                       Guia Procura-se: Flora Endêmica do estado do Rio de Janeiro
                     </a>
                 </h3>
@@ -135,12 +135,12 @@
 
       <section class="col-sm-12 col-md-12 col-lg-12">
         <div class="box post">
-            <a href="https://ckan.jbrj.gov.br/dataset/livrovermelhoendemicasrj" id="livro-vermelho-endemico" style="text-decoration: none;" class="image left box-img">
+            <a href="ttp://dspace.jbrj.gov.br/jspui/handle/doc/92" id="livro-vermelho-endemico" style="text-decoration: none;" class="image left box-img">
                 <img src="{{static_url}}/images/projetos/planejamento/livro-vermelho-endemico.png"/>
             </a>
             <div class="inner">
                 <h3>
-                    <a href="https://ckan.jbrj.gov.br/dataset/livrovermelhoendemicasrj" id="livro-vermelho-endemico2" style="text-decoration: none;">
+                    <a href="ttp://dspace.jbrj.gov.br/jspui/handle/doc/92" id="livro-vermelho-endemico2" style="text-decoration: none;">
                       Livro Vermelho da Flora Endêmica do estado do Rio de Janeiro
                     </a>
                 </h3>
@@ -150,12 +150,12 @@
 
       <section class="col-sm-12 col-md-12 col-lg-12">
         <div class="box post">
-            <a href="https://ckan.jbrj.gov.br/dataset/panendemicasrj" id="pan-endemico-rj" style="text-decoration: none;" class="image left box-img">
+            <a href="http://dspace.jbrj.gov.br/jspui/handle/doc/93" id="pan-endemico-rj" style="text-decoration: none;" class="image left box-img">
                 <img src="{{static_url}}/images/projetos/planejamento/plano-acao-conservacao-endemica-rj.png"/>
             </a>
             <div class="inner">
                 <h3>
-                    <a href="https://ckan.jbrj.gov.br/dataset/panendemicasrj" id="pan-endemico-rj2" style="text-decoration: none;">
+                    <a href="http://dspace.jbrj.gov.br/jspui/handle/doc/93" id="pan-endemico-rj2" style="text-decoration: none;">
                       Plano de Ação Nacional para a Conservação da Flora Endêmica Ameçada de Extinção do estado do Rio de Janeiro
                     </a>
                 </h3>
