Corrigindo links livros do RJ

--- a/templates/home.html
+++ b/templates/home.html
@@ -120,12 +120,12 @@
 
       <section class="col-sm-12 col-md-12 col-lg-12">
         <div class="box post">
-            <a href="https://ckan.jbrj.gov.br/dataset/ucsestaduaisrj" id="uc-estaduais" style="text-decoration: none;" class="image left box-img">
+            <a href="http://dspace.jbrj.gov.br/jspui/handle/doc/96" id="uc-estaduais" style="text-decoration: none;" class="image left box-img">
                 <img src="{{static_url}}/images/projetos/planejamento/unidades-conservacao.png"/>
             </a>
             <div class="inner">
                 <h3>
-                    <a href="https://ckan.jbrj.gov.br/dataset/ucsestaduaisrj" id="uc-estaduais2" style="text-decoration: none;">
+                    <a href="http://dspace.jbrj.gov.br/jspui/handle/doc/96" id="uc-estaduais2" style="text-decoration: none;">
                       Lista da Flora das Unidades de Conservação estaduais do Rio de Janeiro
                     </a>
                 </h3>
@@ -135,12 +135,12 @@
 
       <section class="col-sm-12 col-md-12 col-lg-12">
         <div class="box post">
-            <a href="ttp://dspace.jbrj.gov.br/jspui/handle/doc/92" id="livro-vermelho-endemico" style="text-decoration: none;" class="image left box-img">
+            <a href="http://dspace.jbrj.gov.br/jspui/handle/doc/92" id="livro-vermelho-endemico" style="text-decoration: none;" class="image left box-img">
                 <img src="{{static_url}}/images/projetos/planejamento/livro-vermelho-endemico.png"/>
             </a>
             <div class="inner">
                 <h3>
-                    <a href="ttp://dspace.jbrj.gov.br/jspui/handle/doc/92" id="livro-vermelho-endemico2" style="text-decoration: none;">
+                    <a href="http://dspace.jbrj.gov.br/jspui/handle/doc/92" id="livro-vermelho-endemico2" style="text-decoration: none;">
                       Livro Vermelho da Flora Endêmica do estado do Rio de Janeiro
                     </a>
                 </h3>
