--- a/templates/content/pt-br/document/livros.html
+++ b/templates/content/pt-br/document/livros.html
@@ -33,7 +33,7 @@
 <div class="doc">
     <div class="col-sm-3 col-md-3 col-lg-3">
         <div class="img">
-            <a href="https://ckan.jbrj.gov.br/dataset/ucsestaduaisrj" id="uc-estaduais" style="text-decoration: none;">
+            <a href="http://dspace.jbrj.gov.br/jspui/handle/doc/96" id="uc-estaduais" style="text-decoration: none;">
             <img src="{{static_url}}/images/projetos/planejamento/unidades-conservacao.png"/>
           <div class="portfolio-overlay">
             <p style="line-height:1.5em">
@@ -49,7 +49,7 @@
 <div class="doc">
     <div class="col-sm-3 col-md-3 col-lg-3">
         <div class="img">
-            <a href="ttp://dspace.jbrj.gov.br/jspui/handle/doc/92" id="livro-vermelho-endemico" style="text-decoration: none;">
+            <a href="http://dspace.jbrj.gov.br/jspui/handle/doc/92" id="livro-vermelho-endemico" style="text-decoration: none;">
             <img src="{{static_url}}/images/projetos/planejamento/livro-vermelho-endemico.png"/>
           <div class="portfolio-overlay">
             <p style="line-height:1.5em">
